--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
     - The freeCodeCamp Team
 
     -->
+    <form id="form">
+      <input id="email" type="email" placeholder="Enter your Email Here">
+      <a href="https://www.freecodecamp.com/email-submit">
+        <input id="submit" type="submit">
+      </a>
+    </form>
     <script  src="js/index.js"></script>
   </body>
 </html>
