--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Fork Me! FCC: Test Suite Template</title>
-    <meta >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
   </head>
 
@@ -19,6 +19,31 @@
         <a href="#pricing" class="nav-link">Pricing</a>
       </nav>
     </header>
+    <section class="contact">
+      <form id="form">
+        <input id="email" type="email" placeholder="Enter your Email Here">
+        <a href="https://www.freecodecamp.com/email-submit">
+          <input id="submit" type="submit">
+        </a>
+      </form>  
+    </section>
+    <section id="features">
+      <div class="features-list">
+        <h1>Premium Materials</h1>
+        <p>Our trombones use the shiniest brass which is sourced locally. This will increase the longevity of your purchase. </p>
+      </div>
+      <div class="features-list">
+        <h1>Fast Shipping</h1>
+        <p>We make sure you recieve your trombone as soon as we have finished making it. We also provide free returns if you are not satisfied. </p>
+      </div>
+      <div class="features-list">
+        <h1>Quality Assurance</h1>
+        <p>For every purchase you make, we will ensure there are no damages or faults and we will check and test the pitch of your instrument. </p>
+      </div>
+    </section>
+    <section id="video">
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/y8Yv4pnO7qc" title="Roman Carnival Overture Op. 9 for Five Trombones" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </section>
     <!--
 
     Hello Camper!
@@ -31,12 +56,7 @@
     - The freeCodeCamp Team
 
     -->
-    <form id="form">
-      <input id="email" type="email" placeholder="Enter your Email Here">
-      <a href="https://www.freecodecamp.com/email-submit">
-        <input id="submit" type="submit">
-      </a>
-    </form>
+    
     <script  src="js/index.js"></script>
   </body>
 </html>
