--- a/index.html
+++ b/index.html
@@ -44,6 +44,47 @@
     <section id="video">
       <iframe width="560" height="315" src="https://www.youtube.com/embed/y8Yv4pnO7qc" title="Roman Carnival Overture Op. 9 for Five Trombones" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </section>
+    <section id="pricing">
+      <div id="price">
+        <h3 id="title">TENOR TROMBONE</h3>
+        <h2>$600</h2>
+        <p>
+          Lorem ipsum.
+          Lorem ipsum.
+          Lorem ipsum dolor.
+          Lorem ipsum.
+        </p>
+      <a href="#">
+        <button type="button">SELECT</button>
+      </a>
+      </div>
+      <div id="price">
+        <h3 id="title">BASS TROMBONE</h3>
+        <h2>$900</h2>
+        <p>
+          Lorem ipsum.
+          Lorem ipsum.
+          Lorem ipsum dolor.
+          Lorem ipsum.
+        </p>
+      <a href="#">
+        <button type="button">SELECT</button>
+      </a>
+      </div>
+      <div id="price">
+        <h3 id="title">VALVE TROMBONE</h3>
+        <h2>$1200</h2>
+        <p>
+          Plays similar to a Trumpet
+          Great for Jazz Bands
+          Lorem ipsum dolor.
+          Lorem ipsum.
+        </p>
+      <a href="#">
+        <button type="button">SELECT</button>
+      </a>
+      </div>
+    </section>
     <!--
 
     Hello Camper!
