footer and navbar css

--- a/index.html
+++ b/index.html
@@ -6,17 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
   </head>
-
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
     <header id="header">
       <div id="header-img">
-        <img src="#">
+        <img src="image/product-landing-page-logo.png">
       </div>
       <nav id="nav-bar">
-        <a href="#features" class="nav-link">Features</a>
-        <a href="#how" class="nav-link">How It Works</a>
-        <a href="#pricing" class="nav-link">Pricing</a>
+        <p class="nav-link"><a href="#features">Features</a></p> 
+        <p class="nav-link"><a href="#video" >How It Works</a></p>
+        <p class="nav-link"><a href="#pricing" >Pricing</a></p>
       </nav>
     </header>
     <section class="contact">
@@ -85,6 +84,15 @@
       </a>
       </div>
     </section>
+    <footer class="footer">
+      <ul>
+        <li><a href="#">Privacy
+        </a></li>
+        <li><a href="#">Terms</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>  
+      <p>Copyright 2016, Original Trombones</p>
+    </footer>
     <!--
 
     Hello Camper!
