--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
       </nav>
     </header>
     <section class="contact">
+      <h1>Handcrafted, home-made masterpieces</h1>
       <form id="form">
         <input id="email" type="email" placeholder="Enter your Email Here">
         <a href="https://www.freecodecamp.com/email-submit">
-          <input id="submit" type="submit">
+          <input id="submit" type="submit" value="GET STARTED">
         </a>
       </form>  
     </section>
